Added the ability to handle refresh tokens via cookies.
