# src/main/java/it/pagopa/swclient/mil/auth/bean/GetAccessTokenRequest.java
@@ -5,14 +5,21 @@
  */
 package it.pagopa.swclient.mil.auth.bean;
 
+import java.text.ParseException;
+
+import com.nimbusds.jwt.SignedJWT;
+
+import io.quarkus.logging.Log;
 import io.quarkus.runtime.annotations.RegisterForReflection;
 import it.pagopa.swclient.mil.ErrorCode;
 import it.pagopa.swclient.mil.auth.AuthErrorCode;
+import it.pagopa.swclient.mil.auth.util.AuthException;
 import it.pagopa.swclient.mil.auth.validation.constraints.ValidationTarget;
 import it.pagopa.swclient.mil.bean.HeaderParamName;
 import it.pagopa.swclient.mil.bean.ValidationPattern;
 import jakarta.validation.constraints.NotNull;
 import jakarta.validation.constraints.Pattern;
+import jakarta.ws.rs.CookieParam;
 import jakarta.ws.rs.FormParam;
 import jakarta.ws.rs.HeaderParam;
 import lombok.AllArgsConstructor;
@@ -88,9 +95,8 @@ public class GetAccessTokenRequest {
 	 * refresh_token
 	 */
 	@FormParam(AuthFormParamName.REFRESH_TOKEN)
-	@Pattern(regexp = AuthValidationPattern.REFRESH_TOKEN, message = AuthErrorCode.REFRESH_TOKEN_MUST_MATCH_REGEXP_MSG)
 	@ToString.Exclude
-	private String refreshToken;
+	private SignedJWT refreshToken;
 
 	/*
 	 * poynt_token
@@ -137,4 +143,32 @@ public class GetAccessTokenRequest {
 	@Pattern(regexp = AuthValidationPattern.FISCAL_CODE, message = AuthErrorCode.FISCAL_CODE_MUST_MATCH_REGEXP_MSG)
 	@ToString.Exclude
 	private String fiscalCode;
+
+	/*
+	 * return_cookie
+	 */
+	@FormParam(AuthFormParamName.RETURN_COOKIE)
+	private boolean returnCookie;
+
+	/*
+	 * refresh_cookie
+	 */
+	@CookieParam(AuthCookieParamName.REFRESH_COOKIE)
+	private String refreshCookie;
+
+	/**
+	 * 
+	 */
+	public GetAccessTokenRequest normalize() {
+		if (refreshCookie != null) {
+			Log.debug("The request to refresh tokens contains a refresh cookie");
+			try {
+				refreshToken = SignedJWT.parse(refreshCookie);
+			} catch (ParseException e) {
+				Log.errorf(e, "Error parsing refresh cookie");
+				throw new AuthException(AuthErrorCode.REFRESH_TOKEN_MUST_MATCH_REGEXP, AuthErrorCode.REFRESH_TOKEN_MUST_MATCH_REGEXP_MSG);
+			}
+		}
+		return this;
+	}
 }
