# src/main/java/it/pagopa/swclient/mil/auth/bean/GetAccessTokenResponse.java
@@ -8,8 +8,11 @@ package it.pagopa.swclient.mil.auth.bean;
 import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.annotation.JsonInclude.Include;
 import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.databind.annotation.JsonSerialize;
+import com.nimbusds.jwt.SignedJWT;
 
 import io.quarkus.runtime.annotations.RegisterForReflection;
+import it.pagopa.swclient.mil.auth.util.SignedJWTSerializer;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.NoArgsConstructor;
@@ -31,14 +34,16 @@ public class GetAccessTokenResponse {
 	 */
 	@JsonProperty(AuthJsonPropertyName.ACCESS_TOKEN)
 	@ToString.Exclude
-	private String accessToken;
+	@JsonSerialize(using = SignedJWTSerializer.class)
+	private SignedJWT accessToken;
 
 	/*
 	 * refresh_token
 	 */
 	@JsonProperty(AuthJsonPropertyName.REFRESH_TOKEN)
 	@ToString.Exclude
-	private String refreshToken;
+	@JsonSerialize(using = SignedJWTSerializer.class)
+	private SignedJWT refreshToken;
 
 	/*
 	 * token_type
@@ -57,7 +62,7 @@ public class GetAccessTokenResponse {
 	 * @param refreshToken
 	 * @param expiresIn
 	 */
-	public GetAccessTokenResponse(String accessToken, String refreshToken, long expiresIn) {
+	public GetAccessTokenResponse(SignedJWT accessToken, SignedJWT refreshToken, long expiresIn) {
 		this.accessToken = accessToken;
 		this.refreshToken = refreshToken;
 		this.expiresIn = expiresIn;
